# brickletboot

./: README.md  README.rst
software/: CMakeLists.txt  flash_openocd.cfg
software/src/: boot.c  bootloader_spitfp.c  bootloader_spitfp.h  brickletboot.ld  firmware_entry.c  main.c  tfp_common.c  tfp_common.h  tinydma.c  tinydma.h
software/src/configs/: config.h  config_asf_overwrite.h  config_clocks.h  config_default_bootloader.h  config_dma.h  config_extint.h  config_logging.h  config_spi.h  config_spitfp.h  config_tinydma.h
